--- a/api/templates/registration/login.html
+++ b/api/templates/registration/login.html
@@ -1,6 +1,17 @@
-<h2>Log In</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form }}
-  <button type="submit">Log In</button>
-</form>
+{% load crispy_forms_tags %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+    <div class="card shadow p-4 text-light" style="width: 400px; background-color: #001122; border-radius: 20px;">
+        <h4 class="text-center mb-4 text-light fw-bold">Sign in to your account</h4>
+        
+        <form method="post">
+            {% csrf_token %}
+            {{ form|crispy }} <button type="submit" class="btn btn-primary w-100 mt-3">Continue</button>
+        </form>
+        <div class="text-center mt-3">
+            <p class="small" style="color: #c3c3c3;">Don't have an account? <a href="{% url 'signup' %}">
+                Create one
+            </a></p>
+        </div>
+    </div>
+</div>
