--- a/api/templates/registration/signup.html
+++ b/api/templates/registration/signup.html
@@ -3,10 +3,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
-    <div class="card shadow p-4" style="width: 600px; background-color: #cce5ff; border-radius: 20px;">
+    <div class="card shadow p-4 text-light" style="width: 600px; background-color: #001122; border-radius: 20px;">
         
-        <h4 class="text-center mb-4 text-dark fw-bold">
-            Create an Account
+        <h4 class="text-center mb-4 text-light fw-bold">
+            Create an account
         </h4>
 
         <form method="POST" >
@@ -52,9 +52,13 @@
                 {{ form.confirmPassword }}
             </div>
 
-            <button type="submit" class="btn btn-danger w-100 mt-3">Sign Up</button>
-            <a href="#" class="btn btn-success w-100 mt-2">Back to Login</a>
-
+            <button type="submit" class="btn btn-primary w-100 mt-3">Sign Up</button>
+            <div class="text-center mt-3">
+                <p class="small" style="color: #c3c3c3;">Already have an account? <a href="{% url 'login' %}">
+                    Sign in
+                </a></p>
+                
+            </div>
         </form>
 
     </div>
