Improve signup form handling and user creation
Updated signup view to handle file uploads for display pictures, set a default profile picture if none is uploaded, and include first and last name fields in user creation. Adjusted signup form HTML to support file uploads and set form action. Changed login redirect URL in settings to 'home/'.

--- a/api/templates/registration/login.html
+++ b/api/templates/registration/login.html
@@ -4,7 +4,7 @@
     <div class="card shadow p-4 text-light" style="width: 400px; background-color: #001122; border-radius: 20px;">
         <h4 class="text-center mb-4 text-light fw-bold">Sign in to your account</h4>
         
-        <form method="post">
+        <form method="POST">
             {% csrf_token %}
             {{ form|crispy }} <button type="submit" class="btn btn-primary w-100 mt-3">Continue</button>
         </form>
