--- a/api/templates/api/spa/index.html
+++ b/api/templates/api/spa/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/static/api/spa/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ECS639 Web Programming - Group CW Template</title>
+    <title>ECS639 Web Programming - Group 26 CW</title>
   <script type="module" crossorigin src="/static/api/spa/assets/index-3Wv5gpNM.js"></script>
   <link rel="stylesheet" crossorigin href="/static/api/spa/assets/index-CM6W3zgK.css">
 </head>
